--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="" lang="en" class="footer-logo logo link"
-          ><span class="accent">Web</span>Studio</a
-        >
+        <a href="" lang="en" class="footer-logo logo link">
+          <span class="accent">Web</span>Studio
+        </a>
         <address class="address">
           <ul>
             <li class="address-list list">
@@ -186,24 +186,23 @@
                 href="https://goo.gl/maps/4V4TuiHrdGHVnP1g9"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="address-list-link link"
-              >
+                class="address-list-link link">
                 м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
             <li class="address-list list">
               <a
                 href="mailto:info@devstudio.com"
-                class="address-list-link address-list-contacts link"
-                >info@devstudio.com</a
-              >
+                class="address-list-link address-list-contacts link"> 
+                info@devstudio.com
+              </a>
             </li>
             <li class="address-list list">
               <a
                 href="tel:+380961111111"
-                class="address-list-link address-list-contacts link"
-                >+38 096 111 11 11</a
-              >
+                class="address-list-link address-list-contacts link">
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </address>
