--- a/index.html
+++ b/index.html
@@ -186,21 +186,24 @@
                 href="https://goo.gl/maps/4V4TuiHrdGHVnP1g9"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="address-list-link link">
+                class="address-list-link link"
+              >
                 м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
             <li class="address-list list">
               <a
                 href="mailto:info@devstudio.com"
-                class="address-list-link address-list-contacts link"> 
+                class="address-list-link address-list-contacts link"
+              >
                 info@devstudio.com
               </a>
             </li>
             <li class="address-list list">
               <a
                 href="tel:+380961111111"
-                class="address-list-link address-list-contacts link">
+                class="address-list-link address-list-contacts link"
+              >
                 +38 096 111 11 11
               </a>
             </li>
