--- a/index.html
+++ b/index.html
@@ -45,11 +45,17 @@
         <ul class="contacts">
           <li class="contacts-list list">
             <a href="mailto:info@devstudio.com" class="contacts-list-link link">
+              <svg class="email-img" width="16" height="12">
+                <use href="./images/sprite/sprite.svg#email"></use>
+              </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="contacts-list list">
             <a href="tel:+380961111111" class="contacts-list-link link">
+              <svg class="phone-img" width="10" height="16">
+                <use href="./images/sprite/sprite.svg#phone"></use>
+              </svg>
               +38 096 111 11 11
             </a>
           </li>
@@ -72,6 +78,7 @@
           <ul class="section-features-list">
             <li class="list section-features-list-item">
               <h3 class="section-features-list-title">Увага до деталей</h3>
+              svg.
               <p>
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
