--- a/index.html
+++ b/index.html
@@ -77,14 +77,19 @@
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="section-features-list">
             <li class="list section-features-list-item">
+              <svg class="features-pict" width="270" height="120">
+                <use href="./images/sprite/sprite.svg#antenna"></use>
+              </svg>
               <h3 class="section-features-list-title">Увага до деталей</h3>
-              svg.
               <p>
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li class="list section-features-list-item">
+              <svg class="features-pict" width="270" height="120">
+                <use href="./images/sprite/sprite.svg#clock"></use>
+              </svg>
               <h3 class="section-features-list-title">Пунктуальність</h3>
               <p>
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -92,12 +97,18 @@
               </p>
             </li>
             <li class="list section-features-list-item">
+              <svg class="features-pict" width="270" height="120">
+                <use href="./images/sprite/sprite.svg#diagram"></use>
+              </svg>
               <h3 class="section-features-list-title">Планування</h3>
               <p>
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="list section-features-list-item">
+              <svg class="features-pict" width="270" height="120">
+                <use href="./images/sprite/sprite.svg#astronaut"></use>
+              </svg>
               <h3 class="section-features-list-title">Сучасні технологвї</h3>
               <p>
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -137,6 +148,36 @@
               <div class="section-team-descr">
                 <h3 class="section-team-member">Ігор Дем'яненко</h3>
                 <p lang="en" class="section-team-position">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item list">
@@ -151,6 +192,36 @@
                 <p lang="en" class="section-team-position">
                   Frontend Developer
                 </p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item list">
@@ -163,6 +234,36 @@
               <div class="section-team-descr">
                 <h3 class="section-team-member">Микола Тарасов</h3>
                 <p lang="en" class="section-team-position">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item list">
@@ -175,47 +276,161 @@
               <div class="section-team-descr">
                 <h3 class="section-team-member">Михайло Єрмаков</h3>
                 <p lang="en" class="section-team-position">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-clients section">
+        <div class="container">
+          <h2 class="section-title">Постійні клієнти</h2>
+          <ul class="section-clients-list list">
+            <li class="section-clients-list-item">
+              <a href="" class="section-clients-list-link link">
+                <svg class="clients-logo" width="106" height="60">
+                  <use href="./images/sprite/sprite.svg#logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-list-item">
+              <a href="" class="section-clients-list-link link">
+                <svg class="clients-logo" width="106" height="60">
+                  <use href="./images/sprite/sprite.svg#logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-list-item">
+              <a href="" class="section-clients-list-link link">
+                <svg class="clients-logo" width="106" height="60">
+                  <use href="./images/sprite/sprite.svg#logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-list-item">
+              <a href="" class="section-clients-list-link link">
+                <svg class="clients-logo" width="106" height="60">
+                  <use href="./images/sprite/sprite.svg#logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-list-item">
+              <a href="" class="section-clients-list-link link">
+                <svg class="clients-logo" width="106" height="60">
+                  <use href="./images/sprite/sprite.svg#logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-list-item">
+              <a href="" class="section-clients-list-link link">
+                <svg class="clients-logo" width="106" height="60">
+                  <use href="./images/sprite/sprite.svg#logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="" lang="en" class="footer-logo logo link">
-          <span class="accent">Web</span>Studio
-        </a>
-        <address class="address">
-          <ul>
-            <li class="address-list list">
-              <a
-                href="https://goo.gl/maps/4V4TuiHrdGHVnP1g9"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="address-list-link link"
-              >
-                м. Київ, пр-т Лесі Українки, 26
+      <div class="container footer-container">
+        <div class="footer-wraper-left">
+          <a href="" lang="en" class="footer-logo logo link">
+            <span class="accent">Web</span>Studio
+          </a>
+          <address class="address">
+            <ul>
+              <li class="address-list list">
+                <a
+                  href="https://goo.gl/maps/4V4TuiHrdGHVnP1g9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="address-list-link link"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="address-list list">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="address-list-link address-list-contacts link"
+                >
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="address-list list">
+                <a
+                  href="tel:+380961111111"
+                  class="address-list-link address-list-contacts link"
+                >
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-wraper-right">
+          <h3 class="footer-title">Приєднуйтесь</h3>
+          <ul class="social-list list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-list-link link">
+                <svg class="social-list-icon" width="20" height="20">
+                  <use href="./images/sprite/sprite.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="address-list list">
-              <a
-                href="mailto:info@devstudio.com"
-                class="address-list-link address-list-contacts link"
-              >
-                info@devstudio.com
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-list-link link">
+                <svg class="social-list-icon" width="20" height="20">
+                  <use href="./images/sprite/sprite.svg#twitter"></use>
+                </svg>
               </a>
             </li>
-            <li class="address-list list">
-              <a
-                href="tel:+380961111111"
-                class="address-list-link address-list-contacts link"
-              >
-                +38 096 111 11 11
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-list-link link">
+                <svg class="social-list-icon" width="20" height="20">
+                  <use href="./images/sprite/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-list-link link">
+                <svg class="social-list-icon" width="20" height="20">
+                  <use href="./images/sprite/sprite.svg#linkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
