--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -254,7 +254,7 @@
           </address>
         </div>
         <div class="footer-wraper-right">
-          <h3 class="footer-title">Приєднуйтесь</h3>
+          <p class="footer-title">Приєднуйтесь</p>
           <ul class="social-list list">
             <li class="social-list-item">
               <a href="" class="social-list-link footer-social-list-link link">
