--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -77,9 +77,11 @@
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="section-features-list">
             <li class="list section-features-list-item">
-              <svg class="features-pict" width="270" height="120">
-                <use href="./images/sprite/sprite.svg#antenna"></use>
-              </svg>
+              <div class="features-wrap">
+                <svg class="features-pict" width="70" height="70">
+                  <use href="./images/sprite/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-features-list-title">Увага до деталей</h3>
               <p>
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -87,9 +89,11 @@
               </p>
             </li>
             <li class="list section-features-list-item">
-              <svg class="features-pict" width="270" height="120">
-                <use href="./images/sprite/sprite.svg#clock"></use>
-              </svg>
+              <div class="features-wrap">
+                <svg class="features-pict" width="70" height="70">
+                  <use href="./images/sprite/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="section-features-list-title">Пунктуальність</h3>
               <p>
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -97,18 +101,22 @@
               </p>
             </li>
             <li class="list section-features-list-item">
-              <svg class="features-pict" width="270" height="120">
-                <use href="./images/sprite/sprite.svg#diagram"></use>
-              </svg>
+              <div class="features-wrap">
+                <svg class="features-pict" width="70" height="70">
+                  <use href="./images/sprite/sprite.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-features-list-title">Планування</h3>
               <p>
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="list section-features-list-item">
-              <svg class="features-pict" width="270" height="120">
-                <use href="./images/sprite/sprite.svg#astronaut"></use>
-              </svg>
+              <div class="features-wrap">
+                <svg class="features-pict" width="70" height="70">
+                  <use href="./images/sprite/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-features-list-title">Сучасні технологвї</h3>
               <p>
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -399,7 +407,7 @@
           </address>
         </div>
         <div class="footer-wraper-right">
-          <h3 class="footer-title">Приєднуйтесь</h3>
+          <p class="footer-title">Приєднуйтесь</p>
           <ul class="social-list list">
             <li class="social-list-item">
               <a href="" class="social-list-link footer-social-list-link link">
